--- a/css/app.css
+++ b/css/app.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: rgb(186, 209, 207);
+    background-color: #b8f7ab;
 }
 
 html {
@@ -37,16 +37,17 @@ menu {
     font-weight: bold;
     font-size: 1rem;
     padding: 8px 10px;
-    background-color: rgb(62, 179, 163);
+    background-color: #73e892;
     margin-bottom: 5px;
     border-radius: 5px;
-    border: 1px solid gray;
+    border: 1px solid white;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 .done {
-    background-color: rgb(226, 240, 240);
-    color: rgb(105, 138, 127);
+    background-color: #249252;
+    color: #075626;
+    border: 1px solid black;
 }
